Remove the Z probe button (for now)

--- a/static/index.html
+++ b/static/index.html
@@ -114,7 +114,8 @@
 		            				<div class="col-sm-10">
 			            				<div class="input-group">
 			            					<input type="text" class="form-control posz" id="modal-posz"></input>
-											<div class="input-group-addon probez-button" style="cursor: pointer;"><span class="glyphicon glyphicon-arrow-down"></span></div>
+			            					<!--
+											<div class="input-group-addon probez-button" style="cursor: pointer;"><span class="glyphicon glyphicon-arrow-down"></span></div> -->
 			            					<div class="input-group-addon homez-button" style="cursor: pointer;"><span class="glyphicon glyphicon-home"></span></div>
 
 			            				</div>
