--- a/static/index.html
+++ b/static/index.html
@@ -82,7 +82,6 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-xs-6">
-		  
 							<form class="form-horizontal" role="form">
 								<div class="form-group">
 									<label for="modal-posx" class="col-sm-2 control-label">X:</label>
@@ -138,7 +137,29 @@
 							</div>
 						</div>
 						<div class="col-xs-6">
-							Use the keyboard to control the position of the tool.
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-xs-3"></div>
+									<div class="col-xs-3"><button class="btn btn-default">+Y</button></div>
+									<div class="col-xs-3"></div>
+									<div class="col-xs-3"><button class="btn btn-default">+Z</button></div>
+								</div>							
+								<div class="row">
+									<div class="col-xs-3"><button class="btn btn-default">-X</button></div>
+									<div class="col-xs-3"></div>
+									<div class="col-xs-3"><button class="btn btn-default">+X</button></div>
+									<div class="col-xs-3"></div>
+								</div>							
+
+								<div class="row">
+									<div class="col-xs-3"></div>
+									<div class="col-xs-3"><button class="btn btn-default">-Y</button></div>
+									<div class="col-xs-3"></div>
+									<div class="col-xs-3"><button class="btn btn-default">-Z</button></div>
+								</div>							
+							</div>
+
+
 						</div>
 
 					</div>
