--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
 	  <div class="panel-heading app-heading">FabMo G-Code Streamer</div>
 	  <div class="panel-body">
 		<table class="table table-hover table-bordered" id="files">
-		  <tr><th colspan="3">Files on the tool (click to run)</th></tr>
+		  <tr><th colspan="4">Files on the tool (click to run)</th></tr>
 		</table>
 		<strong>Upload a file...</strong>
 		<p>
@@ -176,7 +176,7 @@
   <script src="./js/libs/jquery-1.10.2.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/libs/bootstrap.file-input.js"></script>
-  <script src="./js/fabmo-latest.js"></script>
+  <script src="./js/FabMo-latest.js"></script>
   
   <script type="text/javascript">
 	var tool = new FabMo(location.hostname||'localhost', '8080');
