--- a/static/index.html
+++ b/static/index.html
@@ -181,8 +181,7 @@
 
   
   <script type="text/javascript">
-  	var tool= new FabMo('192.168.33.134','8080');
-	//var tool = new FabMo(location.hostname||'localhost', '8080');
+	var tool = new FabMo(location.hostname||'localhost', '8080');
 	var ui = new FabMoUI(tool);
 
 	$('#manual-modal').on('show.bs.modal', function (e) {
