Rearrange project again - more modular design. Factor configuration into a purpose-made package. Update docs, take out various

--- a/static/index.html
+++ b/static/index.html
@@ -181,7 +181,7 @@
 
   
   <script type="text/javascript">
-	var tool = new FabMo(location.hostname||'localhost', '8080');
+	var tool = new FabMo(location.hostname||'127.0.0.1', '9876');
 	var ui = new FabMoUI(tool);
 
 	$('#manual-modal').on('show.bs.modal', function (e) {
