Fix launching apps from other apps

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -223,7 +223,7 @@
             <div id="modal_container" style="display:none;"></div>
 
             <div id="app-client-container">
-              <iframe class="app-iframe" sandbox="allow-scripts"></iframe>
+              <iframe class="app-iframe" sandbox="allow-scripts allow-same-origin"></iframe>
             </div>
 
             <div class="clear"></div>
