--- a/dashboard/apps/job_manager/index.html
+++ b/dashboard/apps/job_manager/index.html
@@ -19,14 +19,15 @@
 		</section>
 	</header>
 
-	<section class="container">
+	<section class="container current-job-container" style="display:none">
 		<div class="row title">
 			<div class="small-12 columns">
-				<h3>Current Job</h3>
+				<h3 class="running-job-name"></h3>
 			</div>
 		</div>
 		<div class="row">
 			<div class="small-12 columns current-job-item">
+				<div class="running-job-description"></div>
 			</div>
 		</div>
 	</section>
@@ -123,7 +124,6 @@
 				$(".clear-jobs").removeClass("disabled");
 			}
 			$.each( jobs, function( key, val ) {
-				console.log(val);
 				html = [
 				'<tr><td>',
 					val.name,
@@ -132,7 +132,7 @@
 				'</td><td>',
 					moment(val.created_at).fromNow(),
 				'</td></tr>'
-                ].join('');
+				].join('');
 				$(".jobs-listing").append(html);
 			});
 		});
@@ -163,21 +163,24 @@
 		});
 	});
 
-  	fabmoDashboard.getMachine(function(err, machine) {
-  		tool = new FabMo(machine.ip, machine.port);
-  		ui = new FabMoUI(tool);
+	fabmoDashboard.getMachine(function(err, machine) {
+		tool = new FabMo(machine.ip, machine.port);
+		ui = new FabMoUI(tool);
 
-	  	// Load the list of files available on the tool
-	  	refresh_jobs_list();
+		// Load the list of files available on the tool
+		refresh_jobs_list();
 
-	  	ui.on('status', function(status) {
+		ui.on('status', function(status) {
+			console.log(status.job)
 			if(status.job) {
 				$(".current-job-container").show(500);
+				$(".running-job-name").html(status.job.name);
+				$(".running-job-description").html(status.job.description);
 			} else {
 				$(".current-job-container").hide(500);
 			}
 		});
-  	})
+	})
 
 
 </script>
