--- a/dashboard/apps/table_surfacer/index.html
+++ b/dashboard/apps/table_surfacer/index.html
@@ -74,7 +74,7 @@
 		// Debug for now lets us know that we have a viable dashboard object
 		fabmoDashboard.getMachine(function(err, machine) {
 			machine = new FabMo(machine.ip, machine.port);
-			ui = new FabMoUI(machine);
+			//ui = new FabMoUI(machine);
 		});
 
 		var STEPOVER = 0.9;
