--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -233,6 +233,7 @@
       </div>    
 
     <script src="js/libs/jquery.js"></script>
+    <script src="js/libs/jquery-mobile.js"></script>
     <script src="js/libs/foundation.min.js"></script>
     <script src="js/libs/toastr.min.js"></script>
     <script src="js/libs/underscore.js"></script>
