Fix scrolling on app icons view

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -15,7 +15,7 @@
   <!-- Body of the page -->
 
   <body>
-      <div id="main" style="height:100%" class="off-canvas-wrap" data-offcanvas>
+      <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
 
           <!-- New nav work -->
@@ -214,13 +214,13 @@
 
     
           <!-- Main Content -->
-
-          <section class="main-section">
-            <div id="navbar_container"></div>
-
+          <section class="app-section">
             <div>
               <ul id="app_menu_container"></ul>
             </div>
+          </section>
+          <section class="main-section">
+            <div id="navbar_container"></div>
 
             <div id="modal_container" style="display:none;"></div>
 
