Fix some layout display problems on mobile

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -219,7 +219,7 @@
               <ul id="app_menu_container"></ul>
             </div>
           </section>
-          <section class="main-section">
+          <section class="main-section" style="display:none;">
             <div id="navbar_container"></div>
 
             <div id="modal_container" style="display:none;"></div>
@@ -232,7 +232,7 @@
           </section>
           <a id="close_menu" class="exit-off-canvas"></a>
         </div>
-      </div>    
+      </div>
 
     <script src="js/libs/jquery.js"></script>
     <script src="js/libs/foundation.min.js"></script>
